--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="main__carrousel">
         <article>
             <h1>Most Recent Works</h1>
-            <!-- La idea en el siguiente nav es que al apretar los botones izquierda y derecha, se vaya pasando por los trabajos recientes-->
+            <!-- carrousel latest works-->
             <nav>
             <button type="button" class="main__lButton"></button> 
             <a href="work1.html"><img src="images/work1.png" alt="Work 1"></a>
