--- a/index.html
+++ b/index.html
@@ -9,59 +9,108 @@
     <title>G.S Web Design - Home</title>
 </head>
 <body>
-    <!--Este es el index Modo Flexbox-->
-    <header>
-        <a  href="index.html" class="headerFooter__logo"><img src="images/logo.png" alt="logo"></a>
-        <nav> 
-            <ul>
-                <li><a href="index.html">Home </a></li>
-                <li><a href="pages/works.html">Works </a></li>
-                <li><a href="pages/about.html">About </a></li>
-                <li><a href="pages/resume.html">Resume </a></li>
-                <li><a href="pages/contact.html">Contact </a></li>
-            </ul>
-        </nav>
-        <ul class="headerFooter__contactLogos">   
-            <li><a href="https://github.com/GermanSiliprandi"><img src="images/github.png" alt="github link"></a></li>
-            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="images/linkedin.png" alt="linkedin link"></a></li>
-            <li><a href="mailto:german.siliprandi@gmail.com"><img src="images/gmail.png" alt="mail link"></a></li>
-        </ul> 
-    </header>
-    <section class="section__myPhoto">
-        <img src="images/gs_photo.png" alt="my photo">
-    </section>
-    <h1>A brief description about me</h1>
-        <div class="article__aboutMe">
-            <section>
-                <p>Hi, my name is German Siliprandi, I live in Buenos Aires, Argentina, and I'm a chemical engineer turned web designer.</p>
-                <p> It was about 2020 when I found out that I loved programming, first in python and then Javascript.</p>
-                <p>In 2021 I realized I wanted to be a Digital Nomad, and started the "Full stack Web developer" career in Coderhouse, in order to specialize and work in what I love and travel with my girlfriend at the same time. </p>
-                <p> I'm currently expanding my personal portfolio and seeking for a job as a web developer</p>
-                <p>For more Information about my works and myself, click on the "Works", "About", and "Resume" links in the Menu</p>
-            </section> 
+    <!--Bootstrap Index-->
+    <div class="container-fluid">
+        <div class="row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+                <div class="col-2  padding-0">
+                <a href="index.html"><img class="headerFooter__logo" src="images/logo.png" alt="logo"></a>
+                </div>
+                <div class="col-8 col-lg-7  col-xl-5 justify-content-between padding-0  ">
+                    <div class="navbar padding-0  ">
+                        <a href="index.html">Home </a>
+                        <a href="pages/works.html">Works </a>
+                        <a href="pages/about.html">About </a>
+                        <a href="pages/resume.html">Resume </a>
+                        <a href="pages/contact.html">Contact </a>
+                    </div> 
+                    
+                </div>
+                <div class="col-2 padding-0 ">
+                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
+                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="github link"></a></li>
+                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedin link"></a></li>
+                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mail link"></a></li>
+                </ul> 
+                </div>
+            
         </div>
-    <main class="main__carrousel">
-        <article>
-            <h1>Most Recent Works</h1>
-            <!-- carrousel latest works-->
-            <nav>
-            <button type="button" class="main__lButton"></button> 
-            <a href="work1.html"><img src="images/work1.png" alt="Work 1"></a>
-            <a href="work2.html"><img src="images/work2.png" alt="Work 2"></a>
-            <a href="work3.html"><img src="images/work3.png" alt="Work 3"></a>
-            <button type="button" class="main__lButton main__lButton--right"></button>
-            </nav>
-        </article> 
-    </main>
-    <footer>
-        <a  href="index.html" class="headerFooter__logo"><img src="images/logo.png" alt="logo"></a>
-        <p>Designed by German Siliprandi</p>
-        <ul class="headerFooter__contactLogos">   
-            <li><a href="https://github.com/GermanSiliprandi"><img src="images/github.png" alt="github link"></a></li>
-            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="images/linkedin.png" alt="linkedin link"></a></li>
-            <li><a href="mailto:german.siliprandi@gmail.com"><img src="images/gmail.png" alt="mail link"></a></li>
-        </ul> 
-    </footer>
+        <section class="row align-items-center justify-content-center section__myPhoto mt-0">
+            <div class="col-6">
+            <img src="images/gs_photo.png" alt="my photo">
+        </div>
+        </section>
+        <div class="row align-items-center justify-content-center mt-0">
+            <div class="col-11 col-md-9 col-lg-7 col-xl-6">
+                <h1>A brief description about me</h1>
+            </div>
+        </div>
+            <div class="row align-items-center justify-content-center mt-0">
+                <div class="col-11 col-md-9 col-lg-7 col-xl-6 background-color-09 mb-4">
+                <section>
+                    <p>Hi, my name is German Siliprandi, I live in Buenos Aires, Argentina, and I'm a chemical engineer turned web designer.</p>
+                    <p> It was about 2020 when I found out that I loved programming, first in python and then Javascript.</p>
+                    <p>In 2021 I realized I wanted to be a Digital Nomad, and started the "Full stack Web developer" career in Coderhouse, in order to specialize and work in what I love and travel with my girlfriend at the same time. </p>
+                    <p> I'm currently expanding my personal portfolio and seeking for a job as a web developer</p>
+                    <p>For more Information about my works and myself, click on the "Works", "About", and "Resume" links in the Menu</p>
+                </section> 
+            </div>
+        </div>
+        <main>
+            <article>
+                <div class="row align-items-center justify-content-center">
+                <div class="col-11">
+                <h1>Most Recent Works</h1>
+                </div>
+            </div>
+                <!-- carrousel latest works-->
+                <div class="row justify-content-center mt-0 mb-4">
+                    <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators justify-content-center">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="images/work1.png" class="d-block w-100" alt="recent work 1"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://github.com/GermanSiliprandi/guessing-game"><img src="images/work2.png" class="d-block w-100" alt="recent work 2"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="images/work3.png" class="d-block w-100" alt="recent work 3"></a>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </article> 
+        </main>
+            <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
+                <div class="col-2  padding-0">
+                    <a href="index.html"><img class="headerFooter__logo" src="images/logo.png" alt="logo"></a>
+                    </div>
+        <div class="col-7 padding-0  ">
+            <p class="footer__p ">Designed by German Siliprandi</p>
+        </div>
+            <div class="col-2 padding-0">
+                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
+                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="github link"></a></li>
+                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedin link"></a></li>
+                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mail link"></a></li>
+                </ul> 
+                </div>
+        </div>
+    </div>
 <script src="js/bootstrap.bundle.min.js"> </script>
 </body>
 </html>
