Works Bootstrap 3rd Prerelease alpha V0.1

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <!--Bootstrap Index-->
     <div class="container-fluid">
-        <div class="row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                <div class="col-2  padding-0">
-                <a href="index.html"><img class="headerFooter__logo" src="images/logo.png" alt="logo"></a>
+        <div class=" sticky-top row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+                <div class=" col-2 padding-0">
+                <a href="index.html"><img class="headerFooter__logo float-start" src="images/logo.png" alt="logo"></a>
                 </div>
-                <div class="col-8 col-lg-7  col-xl-5 justify-content-between padding-0  ">
+                <div class="col-8 col-md-7  col-xl-5 justify-content-between padding-0  ">
                     <div class="navbar padding-0  ">
                         <a href="index.html">Home </a>
                         <a href="pages/works.html">Works </a>
