Final Project 3rd prerelease 1.0

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style_sass.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>G.S Web Design - About</title>
 </head>
 <body>
@@ -34,19 +35,23 @@
             <h1>A little more about myself...</h1>
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloribus at veritatis explicabo ratione, excepturi repellat quam maiores, laboriosam neque odio quae porro, sed maxime id facere dolorem molestias natus inventore nemo. Magni voluptates eaque hic, facilis dolores at quam consequuntur quos, quibusdam quisquam pariatur molestiae nihil. Dolore corporis atque possimus iusto, tenetur at quibusdam. Deleniti, amet unde nostrum illo rem, aliquam iusto vitae accusantium ullam, exercitationem modi veniam ipsum corporis perspiciatis nulla praesentium velit voluptatibus labore similique. Eius, illum sapiente eligendi aut culpa distinctio nostrum. Nihil, asperiores ullam ipsa molestias unde eaque necessitatibus ea minus iste dolorum, ut perspiciatis? 
+                    Thanks for getting the time to know me. For a brief description about me, go to the <a href="../index.html">Home </a>Page. 
                 </p>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, temporibus natus. Obcaecati voluptatum aperiam ipsa saepe reprehenderit tempora impedit eum dolorem laborum nisi doloremque recusandae, quisquam minima quibusdam error. Molestiae debitis obcaecati qui tempore! Enim necessitatibus incidunt, non ut eius fugit possimus odit dolor facere tenetur totam dolorum porro consequatur, quasi esse, repudiandae quaerat? Cumque praesentium itaque accusantium facilis perferendis veritatis expedita excepturi dolores nobis cupiditate voluptates ipsam nihil, assumenda cum vel! Laudantium eligendi cupiditate beatae officiis quam distinctio impedit repudiandae odit quo ex saepe praesentium aut fuga tempore, ipsam, nostrum ut eveniet, vel laborum iusto! Esse modi deleniti temporibus.   
+                    I was born in 1990, and since I was a child I loved chemistry , so in 2009 I started Chemical Engineering in the University of Buenos Aires (U.B.A) and found out that I also loved thermodynamics. Hence, I studied VERY hard for 10 years to finally get my engineering degree in 2019. 
                 </p>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, temporibus natus. Obcaecati voluptatum aperiam ipsa saepe reprehenderit tempora impedit eum dolorem laborum nisi doloremque recusandae, quisquam minima quibusdam error. Molestiae debitis obcaecati qui tempore! Enim necessitatibus incidunt, non ut eius fugit possimus odit dolor facere tenetur totam dolorum porro consequatur, quasi esse, repudiandae quaerat? Cumque praesentium itaque accusantium facilis perferendis veritatis expedita excepturi dolores nobis cupiditate voluptates ipsam nihil, assumenda cum vel! Laudantium eligendi cupiditate beatae officiis quam distinctio impedit repudiandae odit quo ex saepe praesentium aut fuga tempore, ipsam, nostrum ut eveniet, vel laborum iusto! Esse modi deleniti temporibus.   
+                    While in college I learned about finite elements, advanced math, how computers manage data and to program in Turbo Pascal, but really didn't fall in love with coding. It was about 2018 when I started learning Python and realized I loved programming and its logic. I look forward to learn C and C++ so I have a better grip on low level coding.
                 </p>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, temporibus natus. Obcaecati voluptatum aperiam ipsa saepe reprehenderit tempora impedit eum dolorem laborum nisi doloremque recusandae, quisquam minima quibusdam error. Molestiae debitis obcaecati qui tempore! Enim necessitatibus incidunt, non ut eius fugit possimus odit dolor facere tenetur totam dolorum porro consequatur, quasi esse, repudiandae quaerat? Cumque praesentium itaque accusantium facilis perferendis veritatis expedita excepturi dolores nobis cupiditate voluptates ipsam nihil, assumenda cum vel! Laudantium eligendi cupiditate beatae officiis quam distinctio impedit repudiandae odit quo ex saepe praesentium aut fuga tempore, ipsam, nostrum ut eveniet, vel laborum iusto! Esse modi deleniti temporibus.   
+                    In 2021 I "discovered" Javascript and Web Design, and I knew I had found my real vocation and started learning, first by myself and then through Coderhouse and their " Full Stack Web Developer" career.
                 </p>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, temporibus natus. Obcaecati voluptatum aperiam ipsa saepe reprehenderit tempora impedit eum dolorem laborum nisi doloremque recusandae, quisquam minima quibusdam error. Molestiae debitis obcaecati qui tempore! Enim necessitatibus incidunt, non ut eius fugit possimus odit dolor facere tenetur totam dolorum porro consequatur, quasi esse, repudiandae quaerat? Cumque praesentium itaque accusantium facilis perferendis veritatis expedita excepturi dolores nobis cupiditate voluptates ipsam nihil, assumenda cum vel! Laudantium eligendi cupiditate beatae officiis quam distinctio impedit repudiandae odit quo ex saepe praesentium aut fuga tempore, ipsam, nostrum ut eveniet, vel laborum iusto! Esse modi deleniti temporibus.   
+                    I also discovered I wanted to be a Digital Nomad so I can travel the world with my girlfriend while doing what I love.
+                </p>
+                    I know I didn't have the shortest path to becoming a Full Stack Web Developer, but I'm really happy I found the career and the job I love doing :D.
+                <p>
+                    I hope you know what you want to do with your life, and if you don't, I REALLY hope you find it as I did.
                 </p>
             </div>
         </section>
