--- a/pages/resume.html
+++ b/pages/resume.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style_sass.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>G.S Web Design - Resume</title>
 </head>
 <body>
@@ -51,67 +52,58 @@
                     <h1>Job Experience</h1>
                     <ul class="main__jobResume main__jobResume--job1">
                         <div class="main__jobResumeH2">
-                            <li><h2>Job Title</h2></li>
-                            <li><h2>Employer</h2></li>
-                            <li><h2>Time in Job 1</h2></li>
+                            <li><h2>Park Security / Parks Inspector and Personnel Supervisor (weekends)</h2></li>
+                            <li><h2>City of Buenos Aires Government</h2></li>
+                            <li><h2> 04/2015 - 06/2017 </h2></li>
                         </div>
-                        <!-- El siguiente ul es una lista de tareas en cada trabajo que no tiene orden. El número sirve solo para indicar tareas diferentes -->
+                        <!-- Unordered job tasks list -->
                         <li class="main__resumeTasks">
                             <ul>
-                                <li>Task1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugiat eaque commodi quod maxime nisi?</li>
-                                <li>Task2: Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, quae assumenda fuga molestias repellat nulla!</li>
-                                <li>Task3: Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maxime provident magnam odit, alias dolor?</li>
-                                <li>Task4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi incidunt asperiores voluptate, sapiente officia illo.</li>
-                                <li>Task5: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium blanditiis aspernatur ea nam, consectetur natus?</li>
-                                <li>Task6: Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam molestiae provident ipsum repudiandae rem dicta.</li>
-                                <li>Task7: Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dolor iusto magni adipisci voluptas nihil?</li>
-                                <li>Task8: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, aperiam sit repudiandae unde ipsam rem?</li>
-                                <li>Task9: Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus exercitationem non error suscipit sint est.</li>
-                                <li>Task10: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab est delectus corporis dolores possimus iste.</li>
+                                <li>Task1: Enforce the regulations of the City of Buenos Aires.</li>
+                                <li>Task2: Accident prevention and problem solving.</li>
+                                <li>Task3: Report writing about parks issues.</li>
+                                <li>Task4: Parks security personnel supervision (15 parks, in charge of up to 12 people).</li>
+                                <li>Task5: Developed plans in collaboration with General Directorate of Green Spaces about parks issues and their possible solutions.</li>
+                                <li>Task6: Decision making about parks issues and security.</li>
+                                <li>Task7: Plan an efficient distribution of personnel</li>
                             </ul>
                         </li>
                     </ul>
                     <ul class="main__jobResume main__jobResume--job2">
                         <div class="main__jobResumeH2">
-                            <li><h2>Job Title</h2></li>
-                            <li><h2>Employer</h2></li>
-                            <li><h2>Time in Job 2</h2></li>
+                            <li><h2>Industrial Risk Analyst</h2></li>
+                            <li><h2>Estudio Ingeniero Solano</h2></li>
+                            <li><h2> 06/2017 - 11/2020</h2></li>
                         </div>
-                        <!-- El siguiente ul es una lista de tareas en cada trabajo que no tiene orden. El número sirve solo para indicar tareas diferentes -->
+                        <!-- Unordered job tasks list -->
                         <li class="main__resumeTasks">
                             <ul>
-                                <li>Task1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugiat eaque commodi quod maxime nisi?</li>
-                                <li>Task2: Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, quae assumenda fuga molestias repellat nulla!</li>
-                                <li>Task3: Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maxime provident magnam odit, alias dolor?</li>
-                                <li>Task4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi incidunt asperiores voluptate, sapiente officia illo.</li>
-                                <li>Task5: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium blanditiis aspernatur ea nam, consectetur natus?</li>
-                                <li>Task6: Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam molestiae provident ipsum repudiandae rem dicta.</li>
-                                <li>Task7: Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dolor iusto magni adipisci voluptas nihil?</li>
-                                <li>Task8: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, aperiam sit repudiandae unde ipsam rem?</li>
-                                <li>Task9: Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus exercitationem non error suscipit sint est.</li>
-                                <li>Task10: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab est delectus corporis dolores possimus iste.</li>
+                                <li>Task1: Field survey in chemical industries</li>
+                                <li>Task2: Explosive atmospheres, fire hazard and risk reports (Quantitative risk analysis, explosive atmospheres).</li>
+                                <li>Task3: Put in place recommended guidelines for mitigating explosive atmospheres</li>
+                                <li>Task4: HAZOP reports</li>
+                                <li>Task5: P&ID, layout, cause effect matrix and process analysis</li>
+                                <li>Task6: Microsoft Access databases modifications.</li>
+                                <li>Task7: Microsoft Word Macros</li>
+                                <li>Task8: ISO 9001 knowledge.</li>
                             </ul>
                         </li>
                     </ul>
                     <ul class="main__jobResume main__jobResume--job3">
                         <div class="main__jobResumeH2">
-                            <li><h2>Job Title</h2></li>
-                            <li><h2>Employer</h2></li>
-                            <li><h2>Time in Job 3</h2></li>
+                            <li><h2>Product Engineer<P</h2></li>
+                            <li><h2>Dunlop Argentina S.A.</h2></li>
+                            <li><h2>11/2020 - Present</h2></li>
                         </div>
-                        <!-- El siguiente ul es una lista de tareas en cada trabajo que no tiene orden. El número sirve solo para indicar tareas diferentes -->
+                        <!-- Unordered job tasks list -->
                         <li class="main__resumeTasks">
                             <ul>
-                                <li>Task1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugiat eaque commodi quod maxime nisi?</li>
-                                <li>Task2: Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, quae assumenda fuga molestias repellat nulla!</li>
-                                <li>Task3: Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo maxime provident magnam odit, alias dolor?</li>
-                                <li>Task4: Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi incidunt asperiores voluptate, sapiente officia illo.</li>
-                                <li>Task5: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium blanditiis aspernatur ea nam, consectetur natus?</li>
-                                <li>Task6: Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam molestiae provident ipsum repudiandae rem dicta.</li>
-                                <li>Task7: Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dolor iusto magni adipisci voluptas nihil?</li>
-                                <li>Task8: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, aperiam sit repudiandae unde ipsam rem?</li>
-                                <li>Task9: Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus exercitationem non error suscipit sint est.</li>
-                                <li>Task10: Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab est delectus corporis dolores possimus iste.</li>
+                                <li>Task1: Product and process design</li>
+                                <li>Task2: Mooney viscosity and rheometry test making and analysis  </li>
+                                <li>Task3: Daily production problem solving</li>
+                                <li>Task4: Search for new raw materials suppliers</li>
+                                <li>Task5: Product design </li>
+                                <li>Task6: Rubber mixture design</li>
                             </ul>
                         </li>
                     </ul>    
@@ -119,14 +111,14 @@
                 <section class="main__studiesResume">
                     <h1>Studies</h1>
                     <ul class="main__studyResume main__studyResume--study1">
-                        <li><h2>Study Title 1</h2></li>
-                        <li><h2>Academic Institution</h2></li>
-                        <li><h2>Time in Institution</h2></li>
+                        <li><h2>Chemical Engineer</h2></li>
+                        <li><h2>University of Buenos Aires (U.B.A)</h2></li>
+                        <li><h2>2009 - 2019</h2></li>
                     </ul>
                     <ul class="main__studyResume main__studyResume--study2">
-                        <li><h2>Study Title 2</h2></li>
-                        <li><h2>Academic Institution</h2></li>
-                        <li><h2>Time in Institution</h2></li>
+                        <li><h2>Web Designer</h2></li>
+                        <li><h2>Coderhouse</h2></li>
+                        <li><h2> 07/2021 - 09/2021</h2></li>
                     </ul>
                 </section>
                 <section class="main__skillsResume">
@@ -134,12 +126,14 @@
                     <ul class="main__skillResume main__skillResume--skill1">
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>Javascript</li>
+                        <li>SASS</li>
+                        <li>Github</li>
                     </ul>
                     <ul class="main__skillResume main__skillResume--skill2">
                         <li>Python</li>
                         <li>Matlab</li>
                         <li>Figma</li>
+                        <li>Git</li>
                     </ul>
                 </section>
             </article>
