--- a/pages/works.html
+++ b/pages/works.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/works_bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>G.S Web Design - Works</title>
 </head>
 <body>
     <!--Bootstrap Works-->
     <div class="container-fluid">
-        <div class=" sticky-top row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                <div class=" col-2 padding-0">
-                <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
+        <header class="sticky-top">
+            <div class=" row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+                <div class="col-2 col-md-auto padding-0">
+                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
                 </div>
-                <div class="col-8 col-md-7  col-xl-5 justify-content-between padding-0  ">
+                <div class="col-8 col-md-7 col-xl-6 justify-content-between padding-0 ">
                     <div class="navbar padding-0  ">
                         <a href="../index.html">Home </a>
                         <a href="../pages/works.html">Works </a>
@@ -25,75 +27,103 @@
                     </div> 
                     
                 </div>
-                <div class="col-2 padding-0 ">
-                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
-                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="github link"></a></li>
-                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedin link"></a></li>
-                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mail link"></a></li>
-                </ul> 
+                <div class="col-2 col-md-auto padding-0">
+                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList">   
+                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="github link"></a></li>
+                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedin link"></a></li>
+                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mail link"></a></li>
+                    </ul> 
                 </div>
-            
-        </div>
-    <main class="main__carrousel">
-        <article>
-            <h1>Most Recent Works</h1>
-            <!-- La idea en el siguiente nav es que al apretar los botones izquierda y derecha, se vaya pasando por los trabajos recientes-->
-            <nav>
-            <button type="button" class="main__lButton"></button> 
-            <a href="work1.html"><img src="../images/work1.png" alt="Work 1"></a>
-            <a href="work2.html"><img src="../images/work2.png" alt="Work 2"></a>
-            <a href="work3.html"><img src="../images/work3.png" alt="Work 3"></a>
-            <button type="button" class="main__lButton main__lButton--right"></button>
-            </nav>
-        </article> 
-    </main> 
-    <article>
-        <h1>All My Works</h1>
-        <!-- La idea de la tabla es que al clickear en la imagen de mis trabajos te lleven a una página web específica del trabajo, donde se explica el contenido con mayor detalle. Como todavía no tengo ningún trabajo hecho, no están hechas.-->
-        <table class="section__tableFormat">
-            <tr>
-                <th>Work</th>
-                <th>Date</th>
-                <th>Brief Description</th>
-                <th>What I did</th>
-            </tr>
-            <tr>
-                <td><a href="work1.html"><img src="../images/work1.png" alt="work 1"></a></td>
-                <td><time>July 2021</time> </td>
-                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, possimus?</td>
-                <td>Front End</td>
-            </tr>
-            <tr>
-                <td><a href="work2.html"><img src="../images/work2.png" alt="work 2"></a></td>
-                <td><time>June 2021</time></td>
-                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, possimus?</td>
-                <td>Front End</td>
-            </tr>
-            <tr>
-                <td><a href="work3.html"><img src="../images/work3.png" alt="work 3"></a></td>
-                <td><time>January 2021</time></td>
-                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, possimus?</td>
-                <td>Front End</td>
-            </tr>
-        </table>
-    </article>
-    <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
-        <div class="col-2  padding-0">
-            <a href="../index.html"><img class="headerFooter__logo" src="../images/logo.png" alt="logo"></a>
             </div>
-<div class="col-7 padding-0  ">
-    <p class="footer__p ">Designed by German Siliprandi</p>
-</div>
-    <div class="col-2 padding-0">
-        <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
-            <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="github link"></a></li>
-            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedin link"></a></li>
-            <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mail link"></a></li>
-        </ul> 
-        </div>
-</div>
-</div>
+        </header>
+        <main>
+            <article>
+                <div class="row">
+                    <div class="col-12 justify-content-center mt-0">
+                        <h1>Most Recent Works</h1>
+                    </div>
+                </div>
+                <!-- carrousel latest works-->
+                <div class="row justify-content-center mt-0 mb-4">
+                    <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators justify-content-center">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" class="d-block w-100" alt="recent work 1"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work2.png" class="d-block w-100" alt="recent work 2"></a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work3.png" class="d-block w-100" alt="recent work 3"></a>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </article> 
+        </main> 
+        <article>
+            <h1>All My Works</h1>
+            <!-- Click on the Table images and go to my github works pages-->
+            <table class=" table mb-4 table-bordered align-middle">
+                <tr>
+                    <th>Work</th>
+                    <th>Date</th>
+                    <th>Brief Description</th>
+                    <th>What I did</th>
+                </tr>
+                <tr>
+                    <td><a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" alt="work 1"></a></td>
+                    <td><time>September 2021</time> </td>
+                    <td>While learning SASS and its functionalities,I translated the .css of a prototype of my current page to a .scss file</td>
+                    <td>Front End, SASS</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work2.png" alt="work 2"></a></td>
+                    <td><time>May 2021</time></td>
+                    <td>I was learning loops in python so I made a guessing game</td>
+                    <td>Programming, Games</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work3.png" alt="work 3"></a></td>
+                    <td><time>June 2021</time></td>
+                    <td>While learning canvas and Javascript I made a basic Script where you enter the lines you want in a canvas drawing </td>
+                    <td>Front End, Javascript</td>
+                </tr>
+            </table>
+        </article>
+        <footer>
+            <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
+                <div class="col-2  padding-0">
+                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
+                </div>
+                <div class="col-7 padding-0">
+                    <p class="footer__p ">Designed by German Siliprandi</p>
+                </div>
+                <div class="col-2 padding-0">
+                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
+                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="github link"></a></li>
+                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedin link"></a></li>
+                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mail link"></a></li>
+                    </ul> 
+                </div>
+            </div>
+        </footer>
     </div>
-    <script src="../js/bootstrap.bundle.min.js"> </script>
+<script src="../js/bootstrap.bundle.min.js"> </script>
 </body>
 </html>
