--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style_sass.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>G.S Web Design - Contact</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
         <article>
             <section>
                 <h1 class="noDecoration">If you want to contact me, please fill the form below and leave a message</h1>
-                <h1 class="noDecoration">I will contact you as soon as possible</h1>
+                <h1 class="noDecoration">I will contact you as soon as possible. (PAGE NOT AVAILABLE AT THE MOMENT. PLEASE SEND AN EMAIL)</h1>
             </section>
             <section class="text20 main__formulario">
             <!-- Formulario de contacto-->
