--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Web Design, Front End, coding, programming, HTML, CSS, SASS, python"> 
+    <meta name="description" content="Get to know the owner of G.S Web Design a little more">
     <link rel="stylesheet" href="../css/style_sass.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>G.S Web Design - About</title>
