4th Prerelease alpha 0.1

--- a/pages/works.html
+++ b/pages/works.html
@@ -96,15 +96,15 @@
                 </tr>
                 <tr>
                     <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work2.png" alt="work 2"></a></td>
-                    <td><time>May 2021</time></td>
-                    <td>I was learning loops in python so I made a guessing game</td>
-                    <td>Programming, Games</td>
-                </tr>
+                    <td><time>June 2021</time></td>
+                    <td>While learning canvas and Javascript I made a basic Script where you enter the lines you want in a canvas drawing</td>
+                    <td> Front End, Javascript</td>
+                </tr> 
                 <tr>
                     <td><a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work3.png" alt="work 3"></a></td>
-                    <td><time>June 2021</time></td>
-                    <td>While learning canvas and Javascript I made a basic Script where you enter the lines you want in a canvas drawing </td>
-                    <td>Front End, Javascript</td>
+                    <td><time>May 2021</time></td>
+                    <td> I made a guessing game in python </td>
+                    <td> Programming, Games </td>
                 </tr>
             </table>
         </article>
